# 🐻‍❄️🌺 charted-helm-plugin: Helm plugin to help faciliate operations with charted-server
# Copyright 2023-2025 Noelware, LLC. <team@noelware.org>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "charted-helm-plugin"
description = "🐻‍❄️🌺 Helm plugin to help faciliate operations with charted-server"
version = "0.1.0"
authors = [
    "Noel Towa <cutie@floofy.dev>",
    "Spotlight <spotlight@joscomputing.space>",
    "John Burke <winter@winterfox.tech>",
]
documentation = "https://charts.noelware.org/docs/helm-plugin/latest"
edition = "2024"
homepage = "https://charts.noelware.org"
license = "Apache-2.0"
publish = false
repository = "https://github.com/charted-dev/helm-plugin"
rust-version = "1.85"
exclude = ["src/ci/**/*"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.32", features = ["derive", "env"] }
clap_complete = "4.5.47"
color-eyre = { version = "0.6.3", features = ["issue-url"] }
derive_more = "2.0.1"
dotenvy = "0.15.7"
etcetera = "0.10.0"
eyre = "0.6.12"
mimalloc = "0.1.44"
reqwest = { version = "0.12.15", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    "multipart",
    "rustls-tls",
] }
schemars = "0.9.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
smol = "2.0.2"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

[dependencies.azalia]
version = "0.1.6"
features = ["log", "log+writers", "log+tracing-log"]

# TODO(@auguwu): use the crates.io version of these crates once avaliable
[dependencies.charted-core]
git = "https://github.com/charted-dev/charted"
rev = "2b9f6d5dc80bd0c4aa0ee3220d0ee1b642b61dc4"
version = "0.1.0"
features = ["schemars"]

[dependencies.charted-helm-types]
git = "https://github.com/charted-dev/charted"
rev = "2b9f6d5dc80bd0c4aa0ee3220d0ee1b642b61dc4"
version = "0.1.0"

[dependencies.charted-types]
git = "https://github.com/charted-dev/charted"
rev = "2b9f6d5dc80bd0c4aa0ee3220d0ee1b642b61dc4"
version = "0.1.0"
features = ["jsonschema"]

# soon
[package.metadata.cargo-machete]
ignored = ["charted-helm-types"]
